# narp

./: .gitignore  :w  Cargo.toml  README.md  go.mod  narp.go
db/: Cargo.toml
db/src/: lib.rs
db/src/ds/: btree.rs
narp/: Cargo.toml
narp/src/: lib.rs  main.rs  utils.rs
narp/src/database/: mod.rs
src/: database.rs  device_listener.rs  lib.rs  main.rs  narp.go  os_detection.rs
src/arp/: mod.rs
src/database/: device.rs  mod.rs
src/nmap/: mod.rs  utils.rs
src/nmap/os_engine/: icmp.rs  tcp.rs
src/os_detection/: mod.rs
src/os_detection/tcp/: mod.rs
src/os_detection/udp/: mod.rs
src/target_detection/: mod.rs
tests/: TODO.txt  db_testing.rs  potential_tests.txt  test_self.rs
utils/: .env  create_db.sql  init.sh
