[package]
name = "narp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
log = { version = "0.4.22", features = ["kv", "kv_serde", "kv_std", "serde", "std"] }
pnet = { version = "0.35.0", features = ["serde", "pcap"] }
serde = "1.0.217"
simplelog = "0.12.2"
socket2 = { version = "0.5.8", features = ["all"] }
threadpool = "1.8.1"
tokio = { version = "1.42.0", features = ["net", "socket2"] }
